# ot-harjoitustyo

./: .env  .env.test  .gitignore  .pylintrc  README.md  S-Pankki.csv  account_data.csv  pyproject.toml  pytest.ini  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: eka.txt  ekan_viikon_log.txt  kolmas.txt
laskarit/viikko2/: CSES - Yhden ero.html
laskarit/viikko2/CSES - Yhden ero_files/: cses-dark.css  cses.css
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: HKL.md  Monopoli basic.html  Monopoli.drawio.html
src/: config.py  index.py  long.csv  save_data.py  short.csv
src/repositories/: account_data.csv  save_data.py
src/services/: reports.py  tk_service.py
src/tests/: Nordea2.csv  S-Pankki.csv  test_account_data.csv  test_file.csv  test_file_short.csv  testifilu.csu  tkservice_test.py
src/ui/: get_balance.py  gui_files.py  gui_start.py  queries.py  reports.py  tui.py  tui_for_early_tests.py
