[tool.poetry]
name = "ohte"
version = "0.1.0"
description = ""
authors = ["Riitta Pessi <riitta@pessi.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^2.0.0"
cowsay = "^5.0"
python-dotenv = "^1.0.0"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
coverage = "^7.2.2"
pylint = "^2.17.2"
autopep8 = "^2.0.2"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
